--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gelato-sample",
+  "name": "gelato-skeleton",
   "version": "0.0.1",
   "description": "Skeleton project for Gelato",
   "main": "app.js",
@@ -14,7 +14,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "gelato.js": "^0.0.1",
+    "gelato.js": "^0.0.3",
     "dotenv": "^16.0.2"
   }
 }
